# cdd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.cdd  test1
.github/workflows/: ci.yml
cmake/: cmake_uninstall.cmake.in  version.h.in
codegen/: CMakeLists.txt
codegen/include/: CodeGenerator.h
codegen/src/: CodeGenerator.cpp
common/: CMakeLists.txt
common/include/: Ast.h  Debug.h  SourceLocation.h  TokenKind.h
doc/: CDD编译器技术文档.md
driver/: CMakeLists.txt  main.cpp
parser/: CMakeLists.txt
parser/include/: Parser.h
parser/src/: Parser.cpp
preprocessor/: CMakeLists.txt
preprocessor/include/: Preprocessor.h
preprocessor/src/: Preprocessor.cpp
scanner/: CMakeLists.txt
scanner/include/: Lexer.h  StateMachine.h
scanner/src/: Lexer.cpp
semantic/: CMakeLists.txt
semantic/include/: IRGenerator.h  SemanticAnalyzer.h  SymbolTable.h  Type.h
semantic/src/: IRGenerator.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp  Type.cpp
stdlib/: cddlib.c  cddlib.hdd
test/: common_header.hdd  run_tests.sh
test/complex/: test_complex_declarations.cdd  test_function_pointers.cdd  test_type_combinations.cdd
test/err/lexer/: test_invalid_binary.cdd  test_invalid_char.cdd  test_invalid_float_exp.cdd  test_invalid_hex.cdd  test_unclosed_char.cdd  test_unclosed_comment.cdd  test_unclosed_string.cdd
test/err/parser/: test_incomplete_func.cdd  test_invalid_decl.cdd  test_invalid_expr.cdd  test_invalid_for.cdd  test_missing_brace.cdd  test_missing_paren.cdd  test_missing_semicolon.cdd
test/err/semantic/: test_break_outside_loop.cdd  test_call_nonfunction.cdd  test_case_outside_switch.cdd  test_continue_outside_loop.cdd  test_deref_nonpointer.cdd  test_invalid_member.cdd  test_invalid_subscript.cdd  test_redefinition.cdd  test_undeclared_var.cdd  test_void_return_value.cdd  test_void_variable.cdd  test_wrong_arg_count.cdd
test/keywords/control_flow/: test_break.cdd  test_case.cdd  test_continue.cdd  test_default.cdd  test_do.cdd  test_else.cdd  test_for.cdd  test_goto.cdd  test_if.cdd  test_return.cdd  test_switch.cdd  test_while.cdd
test/keywords/other/: test_sizeof.cdd
test/keywords/storage_class/: test_auto.cdd  test_extern.cdd  test_register.cdd  test_static.cdd  test_typedef.cdd
test/keywords/struct_types/: test_enum.cdd  test_struct.cdd  test_union.cdd
test/keywords/type_qualifiers/: test_const.cdd  test_restrict.cdd  test_volatile.cdd
test/keywords/type_specifiers/: test_char.cdd  test_double.cdd  test_float.cdd  test_int.cdd  test_long.cdd  test_short.cdd  test_signed.cdd  test_unsigned.cdd  test_void.cdd
test/literals/: test_char_literal.cdd  test_float_literal.cdd  test_identifier.cdd  test_int_literal.cdd  test_string_literal.cdd
test/operators/: test_operators.cdd
test/preprocessor/: advanced.hdd  debug.hdd  nested_level1.hdd  nested_level2.hdd  nested_level3.hdd  test_conditional.cdd  test_define_basic.cdd  test_define_function.cdd  test_define_nested.cdd  test_header1.hdd  test_include.cdd
test/preprocessor/path with space/: header.hdd
test/preprocessor/subdir/: test_header2.hdd
test/punctuations/: test_punctuations.cdd
test/runtime/: test_arithmetic_basic.cdd  test_array_pointer.cdd  test_bitwise_logical_ops.cdd  test_control_flow_comprehensive.cdd  test_enum_const_expr.cdd  test_float_and_global_init.cdd  test_function_pointer_and_ternary.cdd  test_loop_sum.cdd  test_preprocessor_runtime.cdd  test_recursion_factorial.cdd  test_sizeof_and_longlong.cdd  test_stdlib.cdd  test_string_ops.cdd  test_struct_and_call.cdd  test_typedef_struct_nested.cdd  test_union_enum.cdd  test_xmm_param.cdd
